--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "vscode-example-test-adapter",
-  "displayName": "Example Test Explorer",
-  "description": "Run your Example tests in the Sidebar of Visual Studio Code",
+  "name": "woo-test-adapter",
+  "displayName": "Woo Test Explorer",
+  "description": "Run your Woo tests in the Sidebar of Visual Studio Code",
   "icon": "img/icon.png",
-  "author": "Holger Benl <hbenl@evandor.de>",
-  "publisher": "hbenl",
+  "author": "Taha Paksu <tpaksu@gmail.com>",
+  "publisher": "tpaksu",
   "version": "0.0.1",
   "license": "MIT",
-  "homepage": "https://github.com/hbenl/vscode-example-test-adapter",
+  "homepage": "https://github.com/tpaksu/woo-test-adapter",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hbenl/vscode-example-test-adapter.git"
+    "url": "https://github.com/tpaksu/woo-test-adapter.git"
   },
   "bugs": {
-    "url": "https://github.com/hbenl/vscode-example-test-adapter/issues"
+    "url": "https://github.com/tpaksu/woo-test-adapter/issues"
   },
   "categories": [
     "Other"
@@ -32,14 +32,15 @@
     "publish": "vsce publish"
   },
   "dependencies": {
-    "tslib": "^1.9.3",
-    "vscode-test-adapter-api": "^1.7.0",
-    "vscode-test-adapter-util": "^0.7.0"
+    "tslib": "^2.3.1",
+    "vscode-test-adapter-api": "^1.9.0",
+    "vscode-test-adapter-util": "^0.7.1"
   },
   "devDependencies": {
-    "@types/vscode": "~1.23.0",
-    "typescript": "^3.5.3",
-    "vsce": "^1.95.1"
+    "@types/node": "^17.0.23",
+    "@types/vscode": "~1.65.0",
+    "typescript": "^4.6.3",
+    "vsce": "^2.7.0"
   },
   "engines": {
     "vscode": "^1.23.0"
@@ -53,17 +54,44 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "Example Test Explorer configuration",
+      "title": "Woo Test Explorer",
       "properties": {
-        "exampleExplorer.logpanel": {
-          "description": "write diagnotic logs to an output panel",
-          "type": "boolean",
-          "scope": "resource"
+        "woo-test-explorer.command": {
+          "description": "the command for running tests",
+          "type": "string",
+          "scope": "resource",
+          "default": "npm run test-noinstall"
         },
-        "exampleExplorer.logfile": {
+        "woo-test-explorer.logpanel": {
+          "description": "write diagnostic logs to an output panel",
+          "type": "boolean",
+          "scope": "resource",
+          "default": true
+        },
+        "woo-test-explorer.logfile": {
           "description": "write diagnostic logs to the given file",
           "type": "string",
-          "scope": "resource"
+          "scope": "resource",
+          "default": ""
+        },
+        "woo-test-explorer.search.include": {
+          "description": "Include glob patterns for the test file search",
+          "type": "array",
+          "scope": "resource",
+          "default": [
+            "**/*Test.php",
+            "**/test-*.php"
+          ]
+        },
+        "woo-test-explorer.search.exclude": {
+          "description": "Exclude glob patterns for the test file search",
+          "type": "array",
+          "scope": "resource",
+          "default": [
+            "**/vendor/**",
+            "**/node_modules/**",
+            "**/docker/**"
+          ]
         }
       }
     }
