--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "@types/vscode": "~1.65.0",
+    "@types/vscode": "~1.23.0",
     "typescript": "^4.6.3",
     "vsce": "^2.7.0"
   },
@@ -49,7 +49,7 @@
     "hbenl.vscode-test-explorer"
   ],
   "activationEvents": [
-    "*"
+    "onLanguage:php"
   ],
   "contributes": {
     "configuration": {
